Fix: Icons - context menu overlap in linux #1099

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -1226,8 +1226,11 @@
       width: unset !important;
     }
     .menu-iconic-left .menu-iconic-icon,
+    .menu-iconic-left .menu-icon,
     menuitem[type="checkbox"] .menu-iconic-icon,
-    menuitem[type="radio"] .menu-iconic-icon {
+    menuitem[type="checkbox"] .menu-icon,
+    menuitem[type="radio"] .menu-iconic-icon,
+    menuitem[type="radio"] .menu-icon {
       appearance: none !important;
     }
   }
@@ -1256,7 +1259,8 @@
     }
   }
   @media (-moz-gtk-csd-available) {
-    menuitem[checked="true"] > .menu-iconic-left {
+    menuitem[checked="true"] > .menu-iconic-left,
+    menuitem[checked="true"] > .menu-icon {
       -moz-context-properties: fill, fill-opacity !important;
       fill: currentColor !important;
       fill-opacity: var(--menu-icon-opacity) !important;
@@ -1286,7 +1290,7 @@
   @media (-moz-gtk-csd-available) {
     menupopup {
       /* Disable the default appearance so we can override the native styling. */
-      appearance: none !important !important;
+      appearance: none !important;
       /* Prevent any background or border around the outside of the shadow. */
       background-color: transparent !important;
       border: none !important;
@@ -1369,13 +1373,15 @@
     }
   }
   @media (-moz-gtk-csd-available) {
-    #context-navigation > .menuitem-iconic > .menu-iconic-left {
+    #context-navigation > .menuitem-iconic > .menu-iconic-left,
+    #context-navigation > .menuitem-iconic > .menu-icon {
       margin: 0 !important;
       padding: 0 !important;
     }
   }
   @media (-moz-gtk-csd-available) {
-    #context-navigation > .menuitem-iconic > .menu-iconic-left > .menu-iconic-icon {
+    #context-navigation > .menuitem-iconic > .menu-iconic-left > .menu-iconic-icon,
+    #context-navigation > .menuitem-iconic > .menu-icon {
       width: var(--menuitem-min-width) !important;
       height: 32px !important;
       padding: 8px 1em !important;
@@ -1383,7 +1389,8 @@
     }
   }
   @media (-moz-gtk-csd-available) {
-    #context-navigation > .menuitem-iconic[_moz-menuactive="true"] > .menu-iconic-left > .menu-iconic-icon {
+    #context-navigation > .menuitem-iconic[_moz-menuactive="true"] > .menu-iconic-left > .menu-iconic-icon,
+    #context-navigation > .menuitem-iconic[_moz-menuactive="true"] > .menu-icon {
       background-color: var(--menuitem-hover-background-color) !important;
     }
   }
@@ -1391,7 +1398,8 @@
     #context-navigation
       > .menuitem-iconic[_moz-menuactive="true"][disabled="true"]
       > .menu-iconic-left
-      > .menu-iconic-icon {
+      > .menu-iconic-icon,
+    #context-navigation > .menuitem-iconic[_moz-menuactive="true"][disabled="true"] > .menu-icon {
       background-color: transparent !important;
     }
   }
@@ -12026,7 +12034,9 @@
     menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]),
     menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]),
     menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon,
+    menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-icon,
     menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon,
+    menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-icon,
     #main-menubar > menu {
       -moz-appearance: none !important; /* Linux: menulist */
     }
@@ -12376,6 +12386,9 @@
       :root {
         --context-menu-background-padding-default: 6px;
         --context-menu-text-padding: 21px;
+      }
+      .menu-icon {
+        display: unset !important;
       }
     }
     /* Padding - Mac */
@@ -15378,8 +15391,11 @@
     width: unset !important;
   }
   .menu-iconic-left .menu-iconic-icon,
+  .menu-iconic-left .menu-icon,
   menuitem[type="checkbox"] .menu-iconic-icon,
-  menuitem[type="radio"] .menu-iconic-icon {
+  menuitem[type="checkbox"] .menu-icon,
+  menuitem[type="radio"] .menu-iconic-icon,
+  menuitem[type="radio"] .menu-icon {
     appearance: none !important;
   }
 }
@@ -15408,7 +15424,8 @@
   }
 }
 @media (-moz-bool-pref: "userChrome.theme.non_native_menu") and (-moz-gtk-csd-available) {
-  menuitem[checked="true"] > .menu-iconic-left {
+  menuitem[checked="true"] > .menu-iconic-left,
+  menuitem[checked="true"] > .menu-icon {
     -moz-context-properties: fill, fill-opacity !important;
     fill: currentColor !important;
     fill-opacity: var(--menu-icon-opacity) !important;
@@ -15438,7 +15455,7 @@
 @media (-moz-bool-pref: "userChrome.theme.non_native_menu") and (-moz-gtk-csd-available) {
   menupopup {
     /* Disable the default appearance so we can override the native styling. */
-    appearance: none !important !important;
+    appearance: none !important;
     /* Prevent any background or border around the outside of the shadow. */
     background-color: transparent !important;
     border: none !important;
@@ -15521,13 +15538,15 @@
   }
 }
 @media (-moz-bool-pref: "userChrome.theme.non_native_menu") and (-moz-gtk-csd-available) {
-  #context-navigation > .menuitem-iconic > .menu-iconic-left {
+  #context-navigation > .menuitem-iconic > .menu-iconic-left,
+  #context-navigation > .menuitem-iconic > .menu-icon {
     margin: 0 !important;
     padding: 0 !important;
   }
 }
 @media (-moz-bool-pref: "userChrome.theme.non_native_menu") and (-moz-gtk-csd-available) {
-  #context-navigation > .menuitem-iconic > .menu-iconic-left > .menu-iconic-icon {
+  #context-navigation > .menuitem-iconic > .menu-iconic-left > .menu-iconic-icon,
+  #context-navigation > .menuitem-iconic > .menu-icon {
     width: var(--menuitem-min-width) !important;
     height: 32px !important;
     padding: 8px 1em !important;
@@ -15535,7 +15554,8 @@
   }
 }
 @media (-moz-bool-pref: "userChrome.theme.non_native_menu") and (-moz-gtk-csd-available) {
-  #context-navigation > .menuitem-iconic[_moz-menuactive="true"] > .menu-iconic-left > .menu-iconic-icon {
+  #context-navigation > .menuitem-iconic[_moz-menuactive="true"] > .menu-iconic-left > .menu-iconic-icon,
+  #context-navigation > .menuitem-iconic[_moz-menuactive="true"] > .menu-icon {
     background-color: var(--menuitem-hover-background-color) !important;
   }
 }
@@ -15543,7 +15563,8 @@
   #context-navigation
     > .menuitem-iconic[_moz-menuactive="true"][disabled="true"]
     > .menu-iconic-left
-    > .menu-iconic-icon {
+    > .menu-iconic-icon,
+  #context-navigation > .menuitem-iconic[_moz-menuactive="true"][disabled="true"] > .menu-icon {
     background-color: transparent !important;
   }
 }
@@ -27544,7 +27565,9 @@
   menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]),
   menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]),
   menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon,
+  menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-icon,
   menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon,
+  menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-icon,
   #main-menubar > menu {
     -moz-appearance: none !important; /* Linux: menulist */
   }
@@ -27903,6 +27926,9 @@
   :root {
     --context-menu-background-padding-default: 6px;
     --context-menu-text-padding: 21px;
+  }
+  .menu-icon {
+    display: unset !important;
   }
 }
 @media (not (-moz-bool-pref: "userChrome.icon.disabled")) and (-moz-bool-pref: "userChrome.icon.menu") and (-moz-bool-pref: "layout.css.osx-font-smoothing.enabled") {
