--- a/css/leptonChromeESR.css
+++ b/css/leptonChromeESR.css
@@ -1449,8 +1449,11 @@
       width: unset !important;
     }
     .menu-iconic-left .menu-iconic-icon,
+    .menu-iconic-left .menu-icon,
     menuitem[type="checkbox"] .menu-iconic-icon,
-    menuitem[type="radio"] .menu-iconic-icon {
+    menuitem[type="checkbox"] .menu-icon,
+    menuitem[type="radio"] .menu-iconic-icon,
+    menuitem[type="radio"] .menu-icon {
       appearance: none !important;
     }
   }
@@ -1479,7 +1482,8 @@
     }
   }
   @media (-moz-gtk-csd-available) {
-    menuitem[checked="true"] > .menu-iconic-left {
+    menuitem[checked="true"] > .menu-iconic-left,
+    menuitem[checked="true"] > .menu-icon {
       -moz-context-properties: fill, fill-opacity !important;
       fill: currentColor !important;
       fill-opacity: var(--menu-icon-opacity) !important;
@@ -1509,7 +1513,7 @@
   @media (-moz-gtk-csd-available) {
     menupopup {
       /* Disable the default appearance so we can override the native styling. */
-      appearance: none !important !important;
+      appearance: none !important;
       /* Prevent any background or border around the outside of the shadow. */
       background-color: transparent !important;
       border: none !important;
@@ -1592,13 +1596,15 @@
     }
   }
   @media (-moz-gtk-csd-available) {
-    #context-navigation > .menuitem-iconic > .menu-iconic-left {
+    #context-navigation > .menuitem-iconic > .menu-iconic-left,
+    #context-navigation > .menuitem-iconic > .menu-icon {
       margin: 0 !important;
       padding: 0 !important;
     }
   }
   @media (-moz-gtk-csd-available) {
-    #context-navigation > .menuitem-iconic > .menu-iconic-left > .menu-iconic-icon {
+    #context-navigation > .menuitem-iconic > .menu-iconic-left > .menu-iconic-icon,
+    #context-navigation > .menuitem-iconic > .menu-icon {
       width: var(--menuitem-min-width) !important;
       height: 32px !important;
       padding: 8px 1em !important;
@@ -1606,7 +1612,8 @@
     }
   }
   @media (-moz-gtk-csd-available) {
-    #context-navigation > .menuitem-iconic[_moz-menuactive="true"] > .menu-iconic-left > .menu-iconic-icon {
+    #context-navigation > .menuitem-iconic[_moz-menuactive="true"] > .menu-iconic-left > .menu-iconic-icon,
+    #context-navigation > .menuitem-iconic[_moz-menuactive="true"] > .menu-icon {
       background-color: var(--menuitem-hover-background-color) !important;
     }
   }
@@ -1614,7 +1621,8 @@
     #context-navigation
       > .menuitem-iconic[_moz-menuactive="true"][disabled="true"]
       > .menu-iconic-left
-      > .menu-iconic-icon {
+      > .menu-iconic-icon,
+    #context-navigation > .menuitem-iconic[_moz-menuactive="true"][disabled="true"] > .menu-icon {
       background-color: transparent !important;
     }
   }
@@ -12508,7 +12516,9 @@
     menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]),
     menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]),
     menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon,
+    menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-icon,
     menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon,
+    menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-icon,
     #main-menubar > menu {
       -moz-appearance: none !important; /* Linux: menulist */
     }
@@ -13042,6 +13052,9 @@
       :root {
         --context-menu-background-padding-default: 6px;
         --context-menu-text-padding: 21px;
+      }
+      .menu-icon {
+        display: unset !important;
       }
     }
     /* Padding - Mac */
